# phd_research_assistant

./: .gitignore  CLAUDE.md  README.md  start.sh
backend/: .env.example  pyproject.toml
backend/src/: __init__.py  config.py  dependencies.py  main.py
backend/src/api/: __init__.py  agents.py  chat.py  documents.py  papers.py  projects.py  queue.py  recommendations.py  settings.py  websocket.py
backend/src/cli/: __init__.py  migrate_embeddings.py
backend/src/core/: __init__.py
backend/src/core/database/: __init__.py  models.py  operations.py
backend/src/core/external_apis/: __init__.py  browser_download_client.py  perplexity_client.py  scihub_client.py  semantic_scholar_client.py
backend/src/core/llm/: __init__.py  clients.py  prompts.py
backend/src/core/utils/: __init__.py  config.py  file_watcher.py  pdf_cleaner.py  pdf_processor.py
backend/src/models/: __init__.py  schemas.py
backend/src/modules/: __init__.py  document_processor.py
backend/src/modules/file_manager/: __init__.py  processor.py
backend/src/modules/knowledge_chat/: __init__.py  chat_manager.py  context_retriever.py  knowledge_chat.py  rag_engine.py
backend/src/modules/recommender/: __init__.py  paper_recommender.py
backend/src/modules/workflow/: __init__.py  background_processor.py  integration_coordinator.py
backend/src/services/: __init__.py  chat_service.py  paper_service.py  project_service.py  queue_service.py  recommendation_service.py  settings_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  PendingPapersQueue.tsx  ProcessingPapersStatus.tsx  ProjectSelector.tsx
frontend/src/components/ui/: LargePdfConfirmModal.tsx  LoadingSpinner.tsx  Modal.tsx  PaperCard.tsx
frontend/src/contexts/: ProjectContext.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Papers.tsx  Recommendations.tsx  Settings.tsx  WritingAssistant.tsx
frontend/src/services/: api.ts  types.ts
projects/test_proj/chat_sessions/: f29c6302-dd9c-4349-a909-67dd9b46a351.json
projects/test_proj/data/: test.ipynb
