[project]
name = "phd-research-assistant-backend"
version = "2.0.0"
description = "Backend API for PhD Research Assistant - AI-powered research management"
authors = [{name = "Ali Bakhtiari"}]
requires-python = ">=3.9"
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",  # For file uploads
    "websockets>=12.0",

    # Database and ORM
    "sqlmodel>=0.0.14",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Vector database and embeddings
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",

    # LLM integrations
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "langgraph>=0.0.20",  # For agent workflows
    "langchain-openai>=0.0.2",
    "langchain-anthropic>=0.0.1",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "litellm>=1.17.0",

    # Document processing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",

    # HTTP client and utilities
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "python-jose[cryptography]>=3.3.0",  # For JWT tokens
    "passlib[bcrypt]>=1.7.4",  # Password hashing (future auth)

    # Configuration
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # Optional scientific APIs
    "arxiv>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",  # For testing API endpoints
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
